deployed new TheGraph

--- a/eth/thegraph/subgraph.yaml.tmpl
+++ b/eth/thegraph/subgraph.yaml.tmpl
@@ -68,7 +68,7 @@ dataSources:
           handler: handlePay
         - event: SetARWallet(indexed address,string)
           handler: handleSetARWallet
-        - event: SetAuthorInfo(indexed address,string,string,string)
+        - event: SetAuthorInfo(indexed address,string,string,string,string)
           handler: handleSetAuthorInfo
         - event: SetBuyerAffiliateShare(int128)
           handler: handleSetBuyerAffiliateShare
