--- a/eth/thegraph/package.json.tmpl
+++ b/eth/thegraph/package.json.tmpl
@@ -4,10 +4,10 @@
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ @TheGraphShort@",
-    "create-local": "graph create --node http://localhost:8020/ @TheGraphShort@",
-    "remove-local": "graph remove --node http://localhost:8020/ @TheGraphShort@",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 @TheGraphShort@"
+    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ @TheGraph@",
+    "create-local": "graph create --node http://localhost:8020/ @TheGraph@",
+    "remove-local": "graph remove --node http://localhost:8020/ @TheGraph@",
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 @TheGraph@"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.18.0",
