--- a/eth/thegraphTemplates/subgraph.yaml.tmpl
+++ b/eth/thegraphTemplates/subgraph.yaml.tmpl
@@ -7,7 +7,7 @@ dataSources:
     network: @network@
     source:
       address: "@BlogTemplates@"
-      block: @BlogTemplatesBlock@
+      startBlock: @BlogTemplatesBlock@
       abi: Contract
     mapping:
       kind: ethereum/events
