updated templates TheGraph

--- a/eth/thegraphTemplates/subgraph.yaml.tmpl
+++ b/eth/thegraphTemplates/subgraph.yaml.tmpl
@@ -14,20 +14,29 @@ dataSources:
       apiVersion: 0.0.4
       language: wasm/assemblyscript
       entities:
+        - PostChangeOwner
         - PostCreated
         - PostUpdated
+        - TemplateChangeOwner
         - TemplateCreated
+        - TemplateSetArchived
         - TemplateUpdated
       abis:
         - name: Contract
           file: ./abis/Contract.json
       eventHandlers:
-        - event: PostCreated(uint256,address)
+        - event: PostChangeOwner(uint256,address)
+          handler: handlePostChangeOwner
+        - event: PostCreated(uint256)
           handler: handlePostCreated
         - event: PostUpdated(uint256,uint256)
           handler: handlePostUpdated
-        - event: TemplateCreated(uint256,address)
+        - event: TemplateChangeOwner(uint256,address)
+          handler: handleTemplateChangeOwner
+        - event: TemplateCreated(uint256)
           handler: handleTemplateCreated
-        - event: TemplateUpdated(uint256,string,string)
+        - event: TemplateSetArchived(uint256,bool)
+          handler: handleTemplateSetArchived
+        - event: TemplateUpdated(uint256,string,string,string)
           handler: handleTemplateUpdated
       file: ./src/mapping.ts
