--- a/eth/thegraphTemplates/subgraph.yaml.tmpl
+++ b/eth/thegraphTemplates/subgraph.yaml.tmpl
@@ -27,7 +27,7 @@ dataSources:
       eventHandlers:
         - event: PostChangeOwner(uint256,address)
           handler: handlePostChangeOwner
-        - event: PostCreated(uint256)
+        - event: PostCreated(uint256,uint256)
           handler: handlePostCreated
         - event: PostUpdated(uint256,uint256)
           handler: handlePostUpdated
