redeployed TheGraph (rinkeby)

--- a/eth/thegraphFiles/subgraph.yaml.tmpl
+++ b/eth/thegraphFiles/subgraph.yaml.tmpl
@@ -58,7 +58,7 @@ dataSources:
           handler: handleItemCreated
         - event: ItemFilesUpdated(indexed uint256,string,indexed uint256,bytes)
           handler: handleItemFilesUpdated
-        - event: ItemUpdated(indexed uint256,(string,string,string,uint256,uint256,string,string))
+        - event: ItemUpdated(indexed uint256,(string,string,string,uint256,string,string))
           handler: handleItemUpdated
         - event: LinkUpdated(indexed uint256,string,string,string,string,string,indexed uint256)
           handler: handleLinkUpdated
