configure POA network

--- a/eth/thegraphFiles/package.json.tmpl
+++ b/eth/thegraphFiles/package.json.tmpl
@@ -1,5 +1,5 @@
 {
-  "name": "CryptozonRinkeby29",
+  "name": "Zd-Sokol",
   "license": "UNLICENSED",
   "scripts": {
     "codegen": "graph codegen",
