--- a/eth/thegraphFiles/subgraph.yaml.tmpl
+++ b/eth/thegraphFiles/subgraph.yaml.tmpl
@@ -65,7 +65,7 @@ dataSources:
           handler: handleLinkUpdated
         - event: OwnedCategoryUpdated(indexed uint256,string,string,string,string,indexed address)
           handler: handleOwnedCategoryUpdated
-        - event: Pay(indexed address,indexed address,indexed uint256,uint256)
+        - event: Pay(indexed address,indexed address,indexed uint256,uint256,string)
           handler: handlePay
         - event: SetARWallet(indexed address,string)
           handler: handleSetARWallet
