--- a/eth/thegraphFiles/subgraph.yaml.tmpl
+++ b/eth/thegraphFiles/subgraph.yaml.tmpl
@@ -14,7 +14,7 @@ dataSources:
       apiVersion: 0.0.4
       language: wasm/assemblyscript
       entities:
-        - Approval
+        - ApprovalForAll
         - CategoryCreated
         - CategoryUpdated
         - ChildParentVote
@@ -38,13 +38,14 @@ dataSources:
         - SetSellerAffiliateShare
         - SetUploadOwnerShare
         - SetUpvotesOwnerShare
-        - Transfer
+        - TransferBatch
+        - TransferSingle
       abis:
         - name: Contract
           file: ./abis/Contract.json
       eventHandlers:
-        - event: Approval(indexed address,indexed address,uint256)
-          handler: handleApproval
+        - event: ApprovalForAll(indexed address,indexed address,bool)
+          handler: handleApprovalForAll
         - event: CategoryCreated(indexed uint256,indexed address)
           handler: handleCategoryCreated
         - event: CategoryUpdated(indexed uint256,string,string)
@@ -91,6 +92,8 @@ dataSources:
           handler: handleSetUploadOwnerShare
         - event: SetUpvotesOwnerShare(int128)
           handler: handleSetUpvotesOwnerShare
-        - event: Transfer(indexed address,indexed address,uint256)
-          handler: handleTransfer
+        - event: TransferBatch(indexed address,indexed address,indexed address,uint256[],uint256[])
+          handler: handleTransferBatch
+        - event: TransferSingle(indexed address,indexed address,indexed address,uint256,uint256)
+          handler: handleTransferSingle
       file: ./src/mapping.ts
