changed an event format

--- a/eth/thegraphFiles/subgraph.yaml.tmpl
+++ b/eth/thegraphFiles/subgraph.yaml.tmpl
@@ -62,7 +62,7 @@ dataSources:
           handler: handleItemFilesUpdated
         - event: ItemUpdated(indexed uint256,(string,string,string,uint256,string,string))
           handler: handleItemUpdated
-        - event: LinkUpdated(indexed uint256,string,string,string,string,string,indexed uint256)
+        - event: LinkUpdated(indexed uint256,(string,string,string,string,string,indexed uint256))
           handler: handleLinkUpdated
         - event: OwnedCategoryUpdated(indexed uint256,string,string,string,string,indexed address)
           handler: handleOwnedCategoryUpdated
